examples/test/testpolicy9835.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9835
  namespace: namespace175
spec:
  podSelector:
    matchLabels:
      key5: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value39
          key43: value12
          key9: value4
      podSelector:
        matchLabels:
          key4: value10
